Building: DefaultBindingTab Status: Done

--- a/Binding_Lab/Binding_Lab.csproj
+++ b/Binding_Lab/Binding_Lab.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resourse\no_resourse.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resourse\no_resourse.jpg" />
+  </ItemGroup>
+
 </Project>
